--- a/app/select/css/main.css
+++ b/app/select/css/main.css
@@ -1,9 +1,3 @@
-html , body{
-    width:100%;
-    height:100%;
-    overflow: hidden;
-}
-
 .app-wrapper-page{
     width:100%;
     height: 100%;
@@ -13,7 +7,6 @@ html , body{
     overflow: hidden;
     background-color: #6d0083;
 }
-
 .app-wrapper{
     margin-top:10px;
     margin-left:10px;
@@ -23,12 +16,8 @@ html , body{
     height: fit-content;
     background-color: #4b005a;
 }
-
-.app-preview-wrapper{
-    
-}
-
 .app-interface-wrapper{
+    display:inline-block;
     background:#3d0049;
     width: 300px;
     height: calc(100vh - 20px);
@@ -37,7 +26,6 @@ html , body{
     padding-left: 2em;
     padding-top: 2em;
 }
-
 .app-interface-button{
     background-color: #6d0083;
     border-radius: 2em;
@@ -57,7 +45,7 @@ html , body{
 .app-interface-button:hover > span{
     position: relative;
     top: 0px;
-    left: 100px;
+    left: calc(100px - var(--offset,0px));
     color: black;
     transition: 1s;
 }
@@ -67,4 +55,67 @@ html , body{
     left: 0px;
     color:#32003b;
     transition:1s;
+}
+.app-preview-wrapper{
+  width:300px;
+  height:300px;
+  display:inline-block;
+  margin:1em;
+}
+.app-preview-region{
+    width:calc(100% - 300px);
+    height:100%;
+    display:inline-block;
+    position: absolute;
+    top:10px;
+    overflow-y:scroll;
+}
+.app-preview-border{
+  background:red;
+  width: 100%;
+  height: 100%;
+  border-radius: 3em;
+  overflow: hidden;
+}
+.app-preview-preview{
+  width:calc(100% - 10px);
+  height:calc(100% - 10px);
+  margin-left:5px;
+  margin-top:5px;
+  background-color:black;
+  border-radius: 3em;
+  top:5px;
+  overflow: hidden;
+}
+.app-preview-image{
+  width:100%;
+  height:100%;
+}
+.app-preview-button-wrapper{
+  background:blue;
+  position: relative;
+  top:100%;
+  width:100%;
+  height:150px;
+  transition: 0.3s;
+  padding-left:1.5em;
+  padding-top:0.3em;
+}
+.app-preview-button-display-mask{
+  width:calc(100% - 10px);
+  height:calc(100% - 10px);
+  margin-left:5px;
+  border-radius: 3em;
+  position:relative;
+  top:calc(calc(100% - 10px) * -1);
+  overflow:hidden;
+  
+}
+.app-preview-button-display-mask:hover > .app-preview-button-wrapper{
+  top:calc(100% - 150px);
+  transition: 0.3s;
+}
+
+.app-transparent{
+  border:none;
 }
