--- a/app/editor/css/main.css
+++ b/app/editor/css/main.css
@@ -1,7 +1,26 @@
+html,body{
+    width:100vw;
+    height:100vh;
+}
 .app-header{
     position: fixed;
     top:0px;
     left:0px;
     width:100vw;
-    height:100px;
+    height:50px;
+    padding-top:10px;
+}
+.app-title-wrapper{
+    display: inline-block;
+    height: 50px;
+    font-size:50px;
+    padding-left: 0.25em;
+    padding-right: 0.25em;
+    position: relative;
+    top:-10px;
+}
+.app-button-static{
+    display: inline-block;
+    width:50px;
+    height: 50px;
 }
