--- a/app/present/css/main.css
+++ b/app/present/css/main.css
@@ -1,3 +1,13 @@
+html,body{
+  background-color:black;
+}
+.app-visible{
+  opacity: 1 !important;
+  transition-duration: 1s;
+  transition-property: background-color;
+  background-color: black !important;
+  display: block !important;
+}
 .app-wrapper-page{
     width:100%;
     height: 100%;
@@ -5,7 +15,7 @@
     top:0px;
     left:0px;
     overflow: hidden;
-    background-color: #6d0083;
+    background-color: black;
 }
 .app-wrapper{
     margin-top:10px;
