--- a/app/editor/css/main.css
+++ b/app/editor/css/main.css
@@ -4,9 +4,10 @@
 html,body{
     width:100vw;
     height:100vh;
+    background: #6d0083;
 }
 .app-header{
-    position: fixed;
+    position: absolute;
     top:-10px;
     left:0px;
     width:100vw;
@@ -35,6 +36,7 @@ html,body{
     background-color:var(--app-panel-bg);
     left:0px;
     border:2px inset black;
+    overflow: wrap;
 }
 .hiarchy{
     position: absolute;
@@ -97,4 +99,24 @@ html,body{
     width:100%;
     height:min-content;
     max-height: 19px;
+}
+.draggable{
+    display: inline-block;
+    max-width: fit-content;
+}
+.object-select-item{
+    display: inline-block;
+    width:100px;
+    height:100px;
+    margin: 1em;
+    background-color:#ff00ff;
+    border-radius: 1em;
+}
+.object-wrapper{
+    display: inline-block;
+    width:100px;
+    height: 100px;
+    margin:10px;
+    background-color:#999;
+    border-radius: 1em;
 }
