--- a/app/load.css
+++ b/app/load.css
@@ -1,3 +1,12 @@
+.app-loading-wrapper{
+  position: absolute;
+  opacity: 1;
+  width: 100%;
+  height: 100%;
+  margin:0px;
+  left: 0px;
+  background: #6d0083;
+}
 .app-loading{
     width:100px;
     height: 100px;
